@@ -1,14 +1,9 @@
 package io.ebeaninternal.server.query;
 
 import io.ebean.OrderBy;
-import io.ebeaninternal.api.BindParams;
-import io.ebeaninternal.api.CoreLog;
-import io.ebeaninternal.api.SpiExpressionList;
-import io.ebeaninternal.api.SpiQuery;
+import io.ebeaninternal.api.*;
 import io.ebeaninternal.server.bind.DataBind;
 import io.ebeaninternal.server.core.OrmQueryRequest;
-import io.ebeaninternal.server.deploy.BeanDescriptor;
-import io.ebeaninternal.server.deploy.BeanPropertyAssocMany;
 import io.ebeaninternal.server.deploy.DeployParser;
 import io.ebeaninternal.server.expression.DefaultExpressionRequest;
 import io.ebeaninternal.server.persist.Binder;
@@ -21,10 +16,7 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.sql.Timestamp;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 import static java.lang.System.Logger.Level.WARNING;
 
@@ -65,6 +57,7 @@ public final class CQueryPredicates {
    */
   private String dbFilterMany;
   private String dbOrderBy;
+  private String dbDistinctOn;
   private String dbUpdateClause;
   /**
    * Includes from where and order by clauses.
@@ -178,12 +171,8 @@ public final class CQueryPredicates {
     buildUpdateClause(buildSql, deployParser);
     buildBindWhereRawSql(buildSql);
 
-    BeanPropertyAssocMany<?> manyProperty = request.determineMany();
     if (buildSql) {
-      String logicalOrderBy = deriveOrderByWithMany(request.manyPropertyForOrderBy());
-      if (logicalOrderBy != null) {
-        dbOrderBy = deployParser.parse(logicalOrderBy);
-      }
+      dbOrderBy = deriveOrderByWithMany(deployParser);
       // create a copy of the includes required to support the orderBy
       orderByIncludes = new HashSet<>(deployParser.includes());
     }
@@ -194,13 +183,16 @@ public final class CQueryPredicates {
         dbWhere = where.buildSql();
       }
     }
+    SpiQueryManyJoin manyProperty = request.manyJoin();
     if (manyProperty != null) {
-      OrmQueryProperties chunk = query.detail().getChunk(manyProperty.name(), false);
-      SpiExpressionList<?> filterManyExpr = chunk.getFilterMany();
-      if (filterManyExpr != null) {
-        this.filterMany = new DefaultExpressionRequest(request, deployParser, binder, filterManyExpr);
-        if (buildSql) {
-          dbFilterMany = filterMany.buildSql();
+      OrmQueryProperties chunk = query.detail().getChunk(manyProperty.path(), false);
+      if (chunk != null) {
+        SpiExpressionList<?> filterManyExpr = chunk.getFilterMany();
+        if (filterManyExpr != null) {
+          this.filterMany = new DefaultExpressionRequest(request, deployParser, binder, filterManyExpr);
+          if (buildSql) {
+            dbFilterMany = manyProperty.idNullOr(filterMany.buildSql());
+          }
         }
       }
     }
@@ -212,6 +204,10 @@ public final class CQueryPredicates {
       }
     }
     if (buildSql) {
+      final String distinctOn = query.distinctOn();
+      if (distinctOn != null) {
+        dbDistinctOn = deployParser.parse(distinctOn);
+      }
       predicateIncludes = deployParser.includes();
     }
   }
@@ -234,51 +230,53 @@ public final class CQueryPredicates {
     if (dbOrderBy != null) {
       dbOrderBy = alias.parse(dbOrderBy);
     }
+    if (dbDistinctOn != null) {
+      dbDistinctOn = alias.parse(dbDistinctOn);
+    }
   }
 
-  private String parseOrderBy() {
+  private String parseOrderBy(DeployParser parser) {
     OrderBy<?> orderBy = query.getOrderBy();
     if (orderBy == null) {
       return null;
     }
-    return CQueryOrderBy.parse(request.descriptor(), orderBy);
+    return CQueryOrderBy.parse(parser, request.descriptor(), orderBy);
   }
 
   /**
    * There is a many property we need to make sure the ordering is appropriate.
    */
-  private String deriveOrderByWithMany(BeanPropertyAssocMany<?> manyProp) {
-    if (manyProp == null) {
-      return parseOrderBy();
+  private String deriveOrderByWithMany(DeployParser parser) {
+    String orderBy = parseOrderBy(parser);
+    if (!request.includeManyJoin()) {
+      return orderBy;
     }
-    String orderBy = parseOrderBy();
-    BeanDescriptor<?> desc = request.descriptor();
-    String orderById = desc.defaultOrderBy();
+    String orderById = parser.parse(request.descriptor().defaultOrderBy());
     if (orderBy == null) {
       orderBy = orderById;
     }
     // check for default ordering on the many property...
+    SpiQueryManyJoin manyProp = request.manyJoin();
     String manyOrderBy = manyProp.fetchOrderBy();
     if (manyOrderBy != null) {
-      orderBy = orderBy + ", " + CQueryBuilder.prefixOrderByFields(manyProp.name(), manyOrderBy);
+      orderBy = orderBy + ", " + parser.parse(CQueryBuilder.prefixOrderByFields(manyProp.path(), manyOrderBy));
     }
     if (request.isFindById()) {
       // only one master bean so should be fine...
       return orderBy;
     }
-    if (orderBy.startsWith(orderById)) {
-      return orderBy;
-    }
     // more than one top level row may be returned so
     // we need to make sure their is an order by on the
     // top level first (to ensure master/detail construction).
-    int manyPos = orderBy.indexOf(manyProp.name());
-    int idPos = orderBy.indexOf(" " + orderById);
+    int idPos = orderBy.indexOf(orderById);
+    if (idPos == 0) {
+      return orderBy;
+    }
+    int manyPos = orderBy.indexOf("${" + manyProp.path() + "}");
     if (manyPos == -1) {
       // no ordering of the many
       if (idPos == -1) {
         // append the orderById so that master level objects are ordered
-        // even if the orderBy is not unique for the master object
         return orderBy + ", " + orderById;
       }
       // orderById is already in the order by clause
@@ -287,10 +285,10 @@ public final class CQueryPredicates {
     if (idPos == -1 || idPos >= manyPos) {
       if (idPos > manyPos) {
         // there was an error with the order by...
-        String msg = "A Query on [" + desc + "] includes a join to a 'many' association [" + manyProp.name()
-        + "] with an incorrect orderBy [" + orderBy + "]. The id property [" + orderById
-        + "] must come before the many property [" + manyProp.name() + "] in the orderBy."
-        + " Ebean has automatically modified the orderBy clause to do this.";
+        String msg = "A Query on [" + request.descriptor() + "] includes a join to a 'many' association [" + manyProp.path()
+          + "] with an incorrect orderBy [" + orderBy + "]. The id property [" + orderById
+          + "] must come before the many property [" + manyProp.path() + "] in the orderBy."
+          + " Ebean has automatically modified the orderBy clause to do this.";
         CoreLog.log.log(WARNING, msg);
       }
       // the id needs to come before the manyPropName
@@ -303,7 +301,20 @@ public final class CQueryPredicates {
    * Return the bind values for the where expression.
    */
   public List<Object> whereExprBindValues() {
-    return where == null ? Collections.emptyList() : where.bindValues();
+    if (idValue == null && where == null) {
+      return Collections.emptyList();
+    }
+    if (where == null) {
+      return List.of(idValue);
+    }
+    if (idValue == null) {
+      return where.bindValues();
+    }
+
+    List<Object> bindValues = new ArrayList<>();
+    bindValues.add(idValue);
+    bindValues.addAll(where.bindValues());
+    return Collections.unmodifiableList(bindValues);
   }
 
   /**
@@ -339,6 +350,13 @@ public final class CQueryPredicates {
    */
   String dbOrderBy() {
     return dbOrderBy;
+  }
+
+  /**
+   * Return the db distinct on clause.
+   */
+  String dbDistinctOn() {
+    return dbDistinctOn;
   }
 
   /**
